add some translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,6 +18,7 @@
     "staked_amount": "Staked amount",
     "amount_locked_before_withdrawal": "Amount locked before withdrawal",
     "estimated_days": "An average of {days} days between two restakes",
-    "amount_to_wait_for_next_restake": "Wait for {amount} before restake (missing {left_amount})",
-    "amount_to_wait_explained": "It's better to wait for the amount rather than the number of days, as the rewards are not regular"
+    "amount_to_wait_for_next_restake_with_left_amount": "Wait for {amount} before restake (missing {left_amount})",
+    "amount_to_wait_explained": "It's better to wait for the amount rather than the number of days, as the rewards are not regular",
+    "you_can_restake_your_staking_rewards": "You should restake your staking rewards"
 }
