--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -18,6 +18,7 @@
     "staked_amount": "Montant staké",
     "amount_locked_before_withdrawal": "Montant verrouillé avant le retrait",
     "estimated_days": "Une moyenne de {days} jours entre deux restakes",
-    "amount_to_wait_for_next_restake": "Attendre {amount} avant de restake (manque {left_amount})",
-    "amount_to_wait_explained": "Il est préférable d'attendre le montant plutôt que le nombre de jours, car les récompenses ne sont pas régulières"	
+    "amount_to_wait_for_next_restake_with_left_amount": "Attendre {amount} avant de restake (manque {left_amount})",
+    "amount_to_wait_explained": "Il est préférable d'attendre le montant plutôt que le nombre de jours, car les récompenses ne sont pas régulières",
+    "you_can_restake_your_staking_rewards": "Vous devriez restake vos récompenses de staking"
 }
