fix home translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,5 +23,6 @@
     "you_can_restake_your_staking_rewards": "You should restake your staking rewards",
     "if_you_want_to_support": "If you want to support this tool, feel free to make a donation",
     "copied_to_clipboard": "Copied to clipboard",
-    "thanks_for_your_support": "Thanks for your support"
+    "thanks_for_your_support": "Thanks for your support",
+    "home": "Home"
 }
