--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -23,5 +23,6 @@
     "you_can_restake_your_staking_rewards": "Vous devriez restake vos récompenses de staking",
     "if_you_want_to_support": "Si vous voulez soutenir ce projet, libre à vous de faire une donation",
     "copied_to_clipboard": "Copié dans le presse-papier",
-    "thanks_for_your_support": "Merci pour votre soutien"
+    "thanks_for_your_support": "Merci pour votre soutien",
+    "home": "Accueil"
 }
