--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,5 +24,6 @@
     "if_you_want_to_support": "If you want to support this tool, feel free to make a donation",
     "copied_to_clipboard": "Copied to clipboard",
     "thanks_for_your_support": "Thanks for your support",
-    "home": "Home"
+    "home": "Home",
+    "more_coming_soon": "More coming soon..."
 }
