--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -24,5 +24,6 @@
     "if_you_want_to_support": "Si vous voulez soutenir ce projet, libre à vous de faire une donation",
     "copied_to_clipboard": "Copié dans le presse-papier",
     "thanks_for_your_support": "Merci pour votre soutien",
-    "home": "Accueil"
+    "home": "Accueil",
+    "more_coming_soon": "Plus de contenu prochainement..."
 }
