--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,5 +25,8 @@
     "copied_to_clipboard": "Copied to clipboard",
     "thanks_for_your_support": "Thanks for your support",
     "home": "Home",
-    "more_coming_soon": "More coming soon..."
+    "more_coming_soon": "More coming soon...",
+    "ciculating_supply": "Circulating supply",
+    "total_supply": "Total supply",
+    "mex_stats": "MEX Stats"
 }
