--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -25,5 +25,8 @@
     "copied_to_clipboard": "Copié dans le presse-papier",
     "thanks_for_your_support": "Merci pour votre soutien",
     "home": "Accueil",
-    "more_coming_soon": "Plus de contenu prochainement..."
+    "more_coming_soon": "Plus de contenu prochainement...",
+    "ciculating_supply": "Offre en circulation",
+    "total_supply": "Offre max",
+    "mex_stats": "Statistiques MEX"
 }
