--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -26,7 +26,7 @@
     "thanks_for_your_support": "Merci pour votre soutien",
     "home": "Accueil",
     "more_coming_soon": "Plus de contenu prochainement...",
-    "ciculating_supply": "Offre en circulation",
+    "circulating_supply": "Offre en circulation",
     "total_supply": "Offre max",
     "mex_stats": "Statistiques MEX"
 }
