--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,32 +1,32 @@
 {
-    "made_with" : "Hecho con",
-    "by" : "por",
-    "fluxy" : "@fluxy",
-    "not_affiliated" : "Proyecto no afiliado a Elrond",
-    "when_should_i_restake" : "¿Cuándo debo volver a tomar mi EGLD?",
-    "write_here_your_egld_address_or_herotag" : "Escribe aquí tu dirección EGLD o tu herotag",
+    "made_with": "Hecho con",
+    "by": "por",
+    "fluxy": "@fluxy",
+    "not_affiliated": "Proyecto no afiliado a Elrond",
+    "when_should_i_restake": "¿Cuándo debo hacer re-stake de mis EGLDs?",
+    "write_here_your_egld_address_or_herotag": "Escribe aquí tu dirección EGLD o tu herotag",
     "track_my_rewards": "Seguir mis recompensas",
     "bad_address_or_herotag": "Dirección o herotag incorrecta",
-    "no_staking_providers_found": "No se han encontrado proveedores de estacas",
-    "node_count": "Recuento de nodos",
-    "apr": "TAE (Tasa Anual Equivalente)",
+    "no_staking_providers_found": "No se han encontrado proveedores de staking",
+    "node_count": "Cantidad de nodos",
+    "apr": "APR (Tasa Efectiva Anual)",
     "website": "Página web",
-    "featured": "Destacado",
-    "staking_user_count": "Número de usuarios que utilizan este proveedor de apuestas",
-    "recent_searches": "Investigaciones recientes",
-    "claimable_rewards": "Recompensas reclamables",
-    "staked_amount": "Cantidad apostada",
-    "amount_locked_before_withdrawal": "Importe bloqueado antes de la retirada",
-    "estimated_days": "Una media de {days} días entre dos reposiciones",
-    "amount_to_wait_for_next_restake_with_left_amount": "Esperar a {amount} antes de restablecer (falta {left_amount})",
-    "amount_to_wait_explained": "Es mejor esperar la cantidad que el número de días, ya que las recompensas no son regulares",
+    "featured": "Verificado",
+    "staking_user_count": "Número de usuarios que utilizan este proveedor de staking",
+    "recent_searches": "Búsquedas recientes",
+    "claimable_rewards": "Recompensas listas para reclamar",
+    "staked_amount": "Cantidad en staking",
+    "amount_locked_before_withdrawal": "Importe bloqueado antes de su retiro",
+    "estimated_days": "Debes esperar una media de {days} días entre re-stake",
+    "amount_to_wait_for_next_restake_with_left_amount": "Espera a tener {amount} EGLD antes de hacer re-stake (faltan {left_amount})",
+    "amount_to_wait_explained": "Es mejor esperar a la cantidad, que el número de días, ya que las recompensas no son regulares",
     "you_can_restake_your_staking_rewards": "Deberías volver a tomar las recompensas de las apuestas",
     "if_you_want_to_support": "Si quieres apoyar esta herramienta, no dudes en hacer una donación",
     "copied_to_clipboard": "Copiado en el portapapeles",
-    "thanks_for_your_support": "Gracias por su apoyo",
+    "thanks_for_your_support": "Gracias por tu apoyo",
     "home": "Inicio",
     "more_coming_soon": "Pronto habrá más...",
-    "circulating_supply": "Suministro en circulación",
-    "total_supply": "Suministro total",
+    "circulating_supply": "Cantidad en circulación",
+    "total_supply": "Cantidad total",
     "mex_stats": "Estadísticas de MEX"
 }
