README update - Logo and Icons updated to match with the rebranding from ElRond to MultiversX

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2,7 +2,7 @@
     "made_with": "Hecho con",
     "by": "por",
     "fluxy": "@fluxy",
-    "not_affiliated": "Proyecto no afiliado a Elrond",
+    "not_affiliated": "Proyecto no afiliado a MultiversX",
     "when_should_i_restake": "¿Cuándo debo hacer re-stake de mis EGLDs?",
     "write_here_your_egld_address_or_herotag": "Escribe aquí tu dirección EGLD o tu herotag",
     "track_my_rewards": "Seguir mis recompensas",
