--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,10 +1,10 @@
 {
-    "made_with" : "Fait avec",
-    "by" : "par",
-    "fluxy" : "@fluxy",
-    "not_affiliated" : "Projet non affilié avec Elrond",
-    "when_should_i_restake" : "Quand dois-je restake mes EGLD ?",
-    "write_here_your_egld_address_or_herotag" : "Écrivez ici votre adresse EGLD ou votre herotag",
+    "made_with": "Fait avec",
+    "by": "par",
+    "fluxy": "@fluxy",
+    "not_affiliated": "Projet non affilié avec MultiversX",
+    "when_should_i_restake": "Quand dois-je restake mes EGLD ?",
+    "write_here_your_egld_address_or_herotag": "Écrivez ici votre adresse EGLD ou votre herotag",
     "track_my_rewards": "Suivre l'évolution de mes récompenses",
     "bad_address_or_herotag": "Mauvaise adresse ou herotag",
     "no_staking_providers_found": "Aucun fournisseur de staking trouvé",
