--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -1,10 +1,10 @@
 {
-    "made_with" : "Fabricat cu",
-    "by" : "de",
-    "fluxy" : "@fluxy",
-    "not_affiliated" : "Proiect neafiliat cu Elrond",
-    "when_should_i_restake" : "Când ar trebui să-mi refac EGLD-ul?",
-    "write_here_your_egld_address_or_herotag" : "Scrie aici adresa ta EGLD sau herotag-ul tău",
+    "made_with": "Fabricat cu",
+    "by": "de",
+    "fluxy": "@fluxy",
+    "not_affiliated": "Proiect neafiliat cu MultiversX",
+    "when_should_i_restake": "Când ar trebui să-mi refac EGLD-ul?",
+    "write_here_your_egld_address_or_herotag": "Scrie aici adresa ta EGLD sau herotag-ul tău",
     "track_my_rewards": "Urmăriți-mi recompensele",
     "bad_address_or_herotag": "Adresă sau etichetă eronată",
     "no_staking_providers_found": "Nu s-au găsit furnizori de miză",
