--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,10 +1,10 @@
 {
-    "made_with" : "Made with",
-    "by" : "by",
-    "fluxy" : "@fluxy",
-    "not_affiliated" : "Project not affiliated with Elrond",
-    "when_should_i_restake" : "When should I restake my EGLD?",
-    "write_here_your_egld_address_or_herotag" : "Write here your EGLD address or your herotag",
+    "made_with": "Made with",
+    "by": "by",
+    "fluxy": "@fluxy",
+    "not_affiliated": "Project not affiliated with MultiversX",
+    "when_should_i_restake": "When should I restake my EGLD?",
+    "write_here_your_egld_address_or_herotag": "Write here your EGLD address or your herotag",
     "track_my_rewards": "Track my rewards",
     "bad_address_or_herotag": "Bad address or herotag",
     "no_staking_providers_found": "No staking providers found",
